# pybind_example

./: pyproject.toml  readme.md  setup.py
src/: CMakeLists.txt  binder.cpp  functions.cpp  functions.h  main.cpp
